--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://GoitStudentsWorks.github.io/js_80_ViktoriaRosovska/",
   "scripts": {
     "start": "parcel src/*.html --no-cache",
-    "build": "parcel build src/*.html --public-url /js_80_ViktoriaRosovska/"
+    "build": "parcel build src/*.html --public-url /js_80_ViktoriaRosovska"
   },
   "repository": {
     "type": "git",
